--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              {
-                "glob": "_redirects",
-                "input": "src",
-                "output": "/"
-              }
+              "_redirects"
             ],
             "styles": [
               "src/styles.css"
